# sem-swarm

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  handoff.md  test_vector_ops.py
agents/: filter.py  scout.py  synthesizer.py
api/: Dockerfile  config.py  database.py  main.py  models.py  requirements.txt
api/static/: index.html
core/: embeddings.py  extractor.py  memory_client.py  ollama_client.py  vector_ops.py
docs/: DOCUMENTO-EXECUTIVO.md  VISAO-GERAL.md  architecture-decision-rust.md
infra/: init.sql
rust/: Cargo.toml
rust/sem-dreaming/: Cargo.toml  Dockerfile
rust/sem-dreaming/src/: main.rs
rust/sem-vector/: Cargo.toml
rust/sem-vector/src/: batch.rs  dedup.rs  lib.rs  ops.rs  python.rs
scripts/: ingest.py
tests/: benchmark_pipeline.py  test_scout_local.py
tests/benchmark-results/: bench-20260705-233142.json
