[workspace]
resolver = "2"
members = [
    "sem-vector",
    "sem-dreaming",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ROI Labs"]
license = "MIT"
repository = "https://github.com/roilabs/sem-swarm"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
